added verify api
