# api/api.go
@@ -51,6 +51,7 @@ func New(opt *RouterOptions) *gin.Engine {
 	apiV1.GET("/posts", handlerV1.GetAllPosts)
 
 	apiV1.POST("/auth/register", handlerV1.Register)
+	apiV1.POST("/auth/verify", handlerV1.Verify)
 	apiV1.POST("/auth/login", handlerV1.Login)
 
 	apiV1.POST("/file-upload", handlerV1.AuthMiddleware, handlerV1.UploadFile)
